# envoluntary

./: .gitignore  Cargo.toml  README.md  bacon.toml  devshell.toml  flake.nix
.github/workflows/: nix.yaml  update-flake-inputs.yml
cli/: Cargo.toml
cli/src/: config.rs  constants.rs  main.rs  opt.rs  shell.rs
cli/tests/: common.rs  config_cmd.rs  nushell_cmd.rs  shell_cmd.rs
env-hooks/: Cargo.toml  README.md
env-hooks/examples/direnv/: main.rs  opt.rs  shell.rs
env-hooks/src/: lib.rs  shells.rs  state.rs
env-hooks/src/shells/: bash.rs  fish.rs  json.rs  nushell.rs  zsh.rs
env-hooks/tests/: shells.rs  utilities.rs
nix-dev-env/: Cargo.toml
nix-dev-env/src/: lib.rs  nix_command.rs  nix_profile_cache.rs  nix_version_check.rs
nix-dev-env/tests/: profile_caching.rs
nix-modules/: home-manager.nix  nixos.nix
src/: main.rs  nix_command.rs  nix_profile_cache.rs  opt.rs
