[package]
name = "envoluntary"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
once_cell = "1.21.3"
regex = "1.12.2"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"

[dev-dependencies]
rusty-fork = "0.3.1"
tempfile = "3.23.0"
