[workspace]
resolver = "3"
members = ["cli", "env-hooks", "nix-dev-env"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
indexmap = "2.12.0"
once_cell = "1.21.3"
regex = "1.12.2"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
shell-quote = "0.7.2"
tempfile = "3.23.0"
