[workspace]
resolver = "3"
members = ["cli", "env-hooks", "nix-dev-env"]

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bstr = "1.12.0"
clap = { version = "4.5.49", features = ["derive", "env"] }
duct = "1.1.0"
indexmap = { version = "2.12.0", features = ["serde"] }
once_cell = "1.21.3"
regex = "1.12.2"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
shell-quote = "0.7.2"
tempfile = "3.23.0"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.metadata.crane]
name = "envoluntary"
