[package]
name = "envoluntary"
version = "0.1.0"
edition = "2024"
description = "Automatic Nix development environments for your shell"
license = "MIT"
repository = "https://github.com/dfrankland/envoluntary"
documentation = "https://docs.rs/envoluntary"
readme = "README.md"
categories = ["command-line-utilities", "development-tools", "config"]
keywords = ["nix", "shell", "environment", "hooks", "development"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
bstr.workspace = true
clap.workspace = true
config = "0.15.18"
duct.workspace = true
env-hooks = { path = "../env-hooks", version = "0.1.0" }
nix-dev-env = { path = "../nix-dev-env", version = "0.1.0" }
once_cell.workspace = true
regex.workspace = true
ruzstd = "0.8.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_regex = "1.1.0"
sha1.workspace = true
shell-quote.workspace = true
toml = "0.9.8"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.2"
tempfile.workspace = true
