[package]
name = "env-hooks"
version = "0.1.2"
edition = "2024"
description = "Shell integration for automatic environment management"
license = "MIT"
repository = "https://github.com/dfrankland/envoluntary"
documentation = "https://docs.rs/env-hooks"
readme = "README.md"
categories = [
  "command-line-interface",
  "config",
  "development-tools",
  "caching",
  "template-engine",
]
keywords = ["shell", "hooks", "environment", "direnv", "nix"]

[dependencies]
anyhow.workspace = true
bstr.workspace = true
duct.workspace = true
indexmap.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-quote.workspace = true
tempfile.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
base64.workspace = true
clap.workspace = true
flate2 = "1.1.5"
serde.workspace = true
