[package]
name = "nix-dev-env"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bstr.workspace = true
once_cell.workspace = true
regex.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
shell-quote.workspace = true
shellexpand = { version = "3.1.1", features = ["full"] }

[dev-dependencies]
tempfile.workspace = true
