[package]
name = "nix-dev-env"
version = "0.1.3"
edition = "2024"
description = "Nix development environment management and caching"
license = "MIT"
repository = "https://github.com/dfrankland/envoluntary"
documentation = "https://docs.rs/nix-dev-env"
readme = "README.md"
categories = [
  "command-line-interface",
  "config",
  "development-tools",
  "caching",
]
keywords = ["nix", "flake", "development", "caching", "environment"]

[dependencies]
anyhow.workspace = true
bstr.workspace = true
once_cell.workspace = true
regex.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
shell-quote.workspace = true
shellexpand = { version = "3.1.1", features = ["full"] }

[dev-dependencies]
tempfile.workspace = true
